--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "813e5739",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "6a4f4fb9",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns names avaible in merged csv database:\n",
+      "Columns names available in merged csv database:\n",
       "Year\n",
       "Race\n",
       "No\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "df043bf6",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "ea6596c0",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "00e97417",
    "metadata": {},
    "outputs": [],
@@ -146,12 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "032e690e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 4 and 5\n",
+    "# Step 4\n",
     "driver_ratings = {\n",
     "    'Lewis Hamilton': 2.2,\n",
     "    'Max Verstappen': 2.1,\n",
@@ -170,19 +170,8 @@
     "    'Esteban Ocon': 1.4,\n",
     "    'Kevin Magnussen': 1.0,\n",
     "    'George Russell': 1.8,\n",
-    "    'Carlos Sainz': 1.6\n",
-    "}\n",
-    "\n",
-    "constructor_ratings = {\n",
-    "    'Mercedes': 1.9,\n",
-    "    'Red Bull': 1.8,\n",
-    "    'Ferrari': 1.6,\n",
-    "    'McLaren': 1.4,\n",
-    "    'Renault': 1.2,\n",
-    "    'AlphaTauri': 1.0,\n",
-    "    'Aston Martin': 0.9,\n",
-    "    'Williams': 0.7,\n",
-    "    'Honda RBPT': 1.7\n",
+    "    'Carlos Sainz': 1.6,\n",
+    "    'Logan Sargeant': 0.9\n",
     "}\n",
     "\n",
     "def replace_and_get_max_rating(cell, ratings_dict):\n",
@@ -193,13 +182,73 @@
     "    # Return the maximum rating\n",
     "    return max(ratings) if ratings else None\n",
     "\n",
-    "df_processed['Car'] = df_processed['Car'].apply(lambda x: replace_and_get_max_rating(x, constructor_ratings))\n",
     "df_processed['Driver'] = df_processed['Driver'].apply(lambda x: replace_and_get_max_rating(x, driver_ratings))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
+   "id": "3488c4ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 5\n",
+    "constructor_ratings_2022 = {\n",
+    "    'Red Bull Racing RBPT': 1.8,\n",
+    "    'Ferrari': 1.6,\n",
+    "    'Mercedes': 1.9,\n",
+    "    'Alpine Renault': 1.2,\n",
+    "    'McLaren Mercedes': 1.4,\n",
+    "    'Alfa Romeo Ferrari': 1.4,\n",
+    "    'Aston Martin Aramco Mercedes': 0.9,\n",
+    "    'Haas Ferrari': 1.25,\n",
+    "    'AlphaTauri RBPT': 1.0,\n",
+    "    'Williams Mercedes': 0.7\n",
+    "}\n",
+    "\n",
+    "constructor_ratings_2023 = {\n",
+    "    'Red Bull Racing Honda RBPT': 1.8,\n",
+    "    'Ferrari': 1.6,\n",
+    "    'Mercedes': 1.9,\n",
+    "    'Alpine Renault': 1.2,\n",
+    "    'McLaren Mercedes': 1.4,\n",
+    "    'Alfa Romeo Ferrari': 1.4,\n",
+    "    'Aston Martin Aramco Mercedes': 0.9,\n",
+    "    'Haas Ferrari': 1.25,\n",
+    "    'AlphaTauri Honda RBPT': 1.0,\n",
+    "    'Williams Mercedes': 0.7\n",
+    "}\n",
+    "\n",
+    "constructor_ratings_2024 = {\n",
+    "    'Red Bull Racing Honda RBPT': 1.8,\n",
+    "    'Ferrari': 1.6,\n",
+    "    'Mercedes': 1.9,\n",
+    "    'Alpine Renault': 1.2,\n",
+    "    'McLaren Mercedes': 1.4,\n",
+    "    'Kick Sauber Ferrari': 1.4,\n",
+    "    'Aston Martin Aramco Mercedes': 0.9,\n",
+    "    'Haas Ferrari': 1.25,\n",
+    "    'RB Honda RBPT': 1.0,\n",
+    "    'Williams Mercedes': 0.7\n",
+    "}\n",
+    "\n",
+    "# Function to map car names to ratings\n",
+    "def replace_with_rating(car_name, year):\n",
+    "    if year == 2022:\n",
+    "        return constructor_ratings_2022.get(car_name, None)\n",
+    "    elif year == 2023:\n",
+    "        return constructor_ratings_2023.get(car_name, None)\n",
+    "    elif year == 2024:\n",
+    "        return constructor_ratings_2024.get(car_name, None)\n",
+    "    return None\n",
+    "\n",
+    "# Apply the function to the dataframe\n",
+    "df_processed['Car'] = df_processed.apply(lambda row: replace_with_rating(row['Car'], row['Year']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "599ab789",
    "metadata": {},
    "outputs": [
@@ -247,7 +296,7 @@
        "      <td>Bahrain</td>\n",
        "      <td>16</td>\n",
        "      <td>1.7</td>\n",
-       "      <td>1.6</td>\n",
+       "      <td>1.60</td>\n",
        "      <td>1</td>\n",
        "      <td>26.0</td>\n",
        "      <td>23.62</td>\n",
@@ -264,7 +313,7 @@
        "      <td>Bahrain</td>\n",
        "      <td>10</td>\n",
        "      <td>1.4</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
        "      <td>20</td>\n",
        "      <td>0.0</td>\n",
        "      <td>23.62</td>\n",
@@ -281,7 +330,7 @@
        "      <td>Bahrain</td>\n",
        "      <td>1</td>\n",
        "      <td>2.1</td>\n",
-       "      <td>1.8</td>\n",
+       "      <td>1.80</td>\n",
        "      <td>19</td>\n",
        "      <td>0.0</td>\n",
        "      <td>23.62</td>\n",
@@ -298,7 +347,7 @@
        "      <td>Bahrain</td>\n",
        "      <td>11</td>\n",
        "      <td>1.3</td>\n",
-       "      <td>1.8</td>\n",
+       "      <td>1.80</td>\n",
        "      <td>18</td>\n",
        "      <td>0.0</td>\n",
        "      <td>23.62</td>\n",
@@ -315,7 +364,7 @@
        "      <td>Bahrain</td>\n",
        "      <td>27</td>\n",
        "      <td>1.1</td>\n",
-       "      <td>1.9</td>\n",
+       "      <td>0.90</td>\n",
        "      <td>17</td>\n",
        "      <td>0.0</td>\n",
        "      <td>23.62</td>\n",
@@ -349,7 +398,7 @@
        "      <td>Miami</td>\n",
        "      <td>18</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.9</td>\n",
+       "      <td>0.90</td>\n",
        "      <td>17</td>\n",
        "      <td>0.0</td>\n",
        "      <td>28.52</td>\n",
@@ -366,7 +415,7 @@
        "      <td>Miami</td>\n",
        "      <td>23</td>\n",
        "      <td>1.2</td>\n",
-       "      <td>1.9</td>\n",
+       "      <td>0.70</td>\n",
        "      <td>18</td>\n",
        "      <td>0.0</td>\n",
        "      <td>28.52</td>\n",
@@ -383,7 +432,7 @@
        "      <td>Miami</td>\n",
        "      <td>20</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.6</td>\n",
+       "      <td>1.25</td>\n",
        "      <td>19</td>\n",
        "      <td>0.0</td>\n",
        "      <td>28.52</td>\n",
@@ -400,7 +449,7 @@
        "      <td>Miami</td>\n",
        "      <td>10</td>\n",
        "      <td>1.4</td>\n",
-       "      <td>1.2</td>\n",
+       "      <td>1.20</td>\n",
        "      <td>12</td>\n",
        "      <td>0.0</td>\n",
        "      <td>28.52</td>\n",
@@ -417,7 +466,7 @@
        "      <td>Miami</td>\n",
        "      <td>4</td>\n",
        "      <td>1.6</td>\n",
-       "      <td>1.9</td>\n",
+       "      <td>1.40</td>\n",
        "      <td>1</td>\n",
        "      <td>25.0</td>\n",
        "      <td>28.52</td>\n",
@@ -434,18 +483,18 @@
        "</div>"
       ],
       "text/plain": [
-       "      Year     Race  No  Driver  Car  Pos (race)  Points  AvgAirTemp  \\\n",
-       "0     2022  Bahrain  16     1.7  1.6           1    26.0       23.62   \n",
-       "1     2022  Bahrain  10     1.4  1.0          20     0.0       23.62   \n",
-       "2     2022  Bahrain   1     2.1  1.8          19     0.0       23.62   \n",
-       "3     2022  Bahrain  11     1.3  1.8          18     0.0       23.62   \n",
-       "4     2022  Bahrain  27     1.1  1.9          17     0.0       23.62   \n",
-       "...    ...      ...  ..     ...  ...         ...     ...         ...   \n",
-       "1043  2024    Miami  18     1.0  1.9          17     0.0       28.52   \n",
-       "1044  2024    Miami  23     1.2  1.9          18     0.0       28.52   \n",
-       "1045  2024    Miami  20     1.0  1.6          19     0.0       28.52   \n",
-       "1046  2024    Miami  10     1.4  1.2          12     0.0       28.52   \n",
-       "1047  2024    Miami   4     1.6  1.9           1    25.0       28.52   \n",
+       "      Year     Race  No  Driver   Car  Pos (race)  Points  AvgAirTemp  \\\n",
+       "0     2022  Bahrain  16     1.7  1.60           1    26.0       23.62   \n",
+       "1     2022  Bahrain  10     1.4  1.00          20     0.0       23.62   \n",
+       "2     2022  Bahrain   1     2.1  1.80          19     0.0       23.62   \n",
+       "3     2022  Bahrain  11     1.3  1.80          18     0.0       23.62   \n",
+       "4     2022  Bahrain  27     1.1  0.90          17     0.0       23.62   \n",
+       "...    ...      ...  ..     ...   ...         ...     ...         ...   \n",
+       "1043  2024    Miami  18     1.0  0.90          17     0.0       28.52   \n",
+       "1044  2024    Miami  23     1.2  0.70          18     0.0       28.52   \n",
+       "1045  2024    Miami  20     1.0  1.25          19     0.0       28.52   \n",
+       "1046  2024    Miami  10     1.4  1.20          12     0.0       28.52   \n",
+       "1047  2024    Miami   4     1.6  1.40           1    25.0       28.52   \n",
        "\n",
        "      AvgHumidity  AvgPressure  TotalRainfall  AvgTrackTemp  AvgWindDirection  \\\n",
        "0           29.49      1010.39              0         28.61            124.43   \n",
@@ -476,7 +525,7 @@
        "[897 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "4db84d1f",
    "metadata": {},
    "outputs": [],
