finished Car constructors

--- a/f1_project.ipynb
+++ b/f1_project.ipynb
@@ -965,25 +965,42 @@
     "    # Return the maximum rating\n",
     "    return max(ratings) if ratings else None\n",
     "\n",
-    "df_processed['Driver'] = df_processed['Driver'].apply(lambda x: replace_and_get_max_rating(x, driver_ratings))\n"
+    "df_processed['Driver'] = df_processed['Driver'].apply(lambda x: replace_and_get_max_rating(x, driver_ratings))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Red Bull Racing RBPT', 0.9)\n",
+      "('Ferrari', 0.82)\n",
+      "('Mercedes', 0.97)\n",
+      "('Alpine Renault', 0.63)\n",
+      "('McLaren Mercedes', 0.7)\n",
+      "('Alfa Romeo Ferrari', 0.7)\n",
+      "('Aston Martin Aramco Mercedes', 0.4)\n",
+      "('Haas Ferrari', 0.66)\n",
+      "('AlphaTauri RBPT', 0.5)\n",
+      "('Williams Mercedes', 0.3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 5\n",
     "race_performance = {\n",
     "    'Red Bull Racing RBPT': 45,\n",
     "    'Ferrari': 40,\n",
     "    'Mercedes': 50,\n",
-    "    'Alpine Renault': 0, #TO DO\n",
+    "    'Alpine Renault': 25,\n",
     "    'McLaren Mercedes': 30, \n",
-    "    'Alfa Romeo Ferrari': 0, # TO DO\n",
+    "    'Alfa Romeo Ferrari': 30, \n",
     "    'Aston Martin Aramco Mercedes': 10,\n",
-    "    'Haas Ferrari': 0, # TO DO\n",
+    "    'Haas Ferrari': 26, \n",
     "    'AlphaTauri RBPT': 15,\n",
     "    'Williams Mercedes': 5\n",
     "}\n",
@@ -992,11 +1009,11 @@
     "    'Red Bull Racing RBPT': 90,\n",
     "    'Ferrari': 85,\n",
     "    'Mercedes': 95,\n",
-    "    'Alpine Renault': 0.0, #TO DO\n",
-    "    'McLaren Mercedes': 30,\n",
-    "    'Alfa Romeo Ferrari': 0.0, # TO DO\n",
+    "    'Alpine Renault': 76,\n",
+    "    'McLaren Mercedes': 80,\n",
+    "    'Alfa Romeo Ferrari': 80,\n",
     "    'Aston Martin Aramco Mercedes': 60,\n",
-    "    'Haas Ferrari': 0, # TO DO\n",
+    "    'Haas Ferrari': 79, \n",
     "    'AlphaTauri RBPT': 70,\n",
     "    'Williams Mercedes': 50\n",
     "}\n",
@@ -1008,20 +1025,6 @@
     "    C_c = finish_rate[constructor] / 100 * 2\n",
     "    R_c = (0.5 * E_c + 0.5 * C_c) / 2\n",
     "    constructor_ratings_2022[constructor] = round(R_c, 2)\n",
-    "\n",
-    "\n",
-    "# constructor_ratings_2022 = {\n",
-    "#     'Red Bull Racing RBPT': 1.8,\n",
-    "#     'Ferrari': 1.6,\n",
-    "#     'Mercedes': 1.9,\n",
-    "#     'Alpine Renault': 1.2,\n",
-    "#     'McLaren Mercedes': 1.4,\n",
-    "#     'Alfa Romeo Ferrari': 1.4,\n",
-    "#     'Aston Martin Aramco Mercedes': 0.9,\n",
-    "#     'Haas Ferrari': 1.25,\n",
-    "#     'AlphaTauri RBPT': 1.0,\n",
-    "#     'Williams Mercedes': 0.7\n",
-    "# }\n",
     "\n",
     "key_mapping_2023 = {\n",
     "    'Red Bull Racing RBPT': 'Red Bull Racing Honda RBPT',\n",
