--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "id": "813e5739",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "id": "6a4f4fb9",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columns names avaible in merged csv database:\n",
+      "Columns names available in merged csv database:\n",
       "Year\n",
       "Race\n",
       "No\n",
@@ -69,6 +69,7 @@
    ],
    "source": [
     "raw_merged_data_path = \"final_f1_data.csv\"\n",
+    "# raw_merged_data_path = \"test.csv\"\n",
     "df_raw = pd.read_csv(raw_merged_data_path)\n",
     "print(\"Columns names available in merged csv database:\")\n",
     "print(*list(df_raw.columns), sep='\\n')"
@@ -90,19 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "id": "df043bf6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1 \n",
-    "relevant_columns = [\"Year\", \"Race\", \"No\", \"Driver\", \"Car\", \"Pos (race)\", \"Points\", \"AvgAirTemp\", \"AvgHumidity\", \"AvgPressure\", \"TotalRainfall\", \"AvgTrackTemp\", \"AvgWindDirection\", \"AvgWindSpeed\"]\n",
+    "relevant_columns = [\"Year\", \"Race\", \"No\", \"Driver\", \"Car\", \"Pos (race)\", \"Points\", \"Pos (qualifying)\", \"AvgAirTemp\", \"AvgHumidity\", \"AvgPressure\", \"TotalRainfall\", \"AvgTrackTemp\", \"AvgWindDirection\", \"AvgWindSpeed\"]\n",
     "df_processed = df_raw.filter(relevant_columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "id": "ea6596c0",
    "metadata": {},
    "outputs": [],
@@ -123,12 +124,37 @@
     "df_processed = df_processed.groupby(['Year', 'Race'], group_keys=False).apply(replace_nc_dq)\n",
     "\n",
     "# Convert \"Pos (race)\" column to numeric, forcing errors to NaN, then fill NaNs with 0 (or any placeholder value if needed)\n",
-    "df_processed['Pos (race)'] = pd.to_numeric(df_processed['Pos (race)'], errors='coerce').fillna(0).astype(int)"
+    "df_processed['Pos (race)'] = pd.to_numeric(df_processed['Pos (race)'], errors='coerce').fillna(20).astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
+   "id": "511f03f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_processed['Pos (qualifying)'] = df_processed['Pos (qualifying)'].astype(str)\n",
+    "\n",
+    "# Funkcja zastępująca wartości \"NC\" i \"DQ\" w kolumnie \"Pos (qualifying)\" kolejną dostępną pozycją\n",
+    "def replace_nc_dq_qual(group):\n",
+    "    # Sortuj według \"Pos (qualifying)\" aby określić kolejną pozycję\n",
+    "    positions = sorted([int(pos) for pos in group['Pos (qualifying)'] if pos.isdigit()])\n",
+    "    next_place = max(positions) + 1 if positions else 1\n",
+    "    # Zastąp \"NC\" i \"DQ\" kolejną pozycją\n",
+    "    group['Pos (qualifying)'] = group['Pos (qualifying)'].replace(['NC', 'DQ'], next_place)\n",
+    "    return group\n",
+    "\n",
+    "# Zastosuj funkcję do każdej grupy wyścigów w każdym roku\n",
+    "df_processed = df_processed.groupby(['Year', 'Race'], group_keys=False).apply(replace_nc_dq_qual)\n",
+    "\n",
+    "# Przekształć kolumnę \"Pos (qualifying)\" na numeryczną, wymuszając błędy na NaN, a następnie wypełnij NaN zerami (lub dowolną wartością zastępczą, jeśli potrzebna)\n",
+    "df_processed['Pos (qualifying)'] = pd.to_numeric(df_processed['Pos (qualifying)'], errors='coerce').fillna(20).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "id": "00e97417",
    "metadata": {},
    "outputs": [],
@@ -146,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "id": "032e690e",
    "metadata": {},
    "outputs": [],
@@ -193,14 +219,60 @@
     "    # Return the maximum rating\n",
     "    return max(ratings) if ratings else None\n",
     "\n",
+    "df_processed['Name'] = df_processed['Driver']\n",
     "df_processed['Car'] = df_processed['Car'].apply(lambda x: replace_and_get_max_rating(x, constructor_ratings))\n",
     "df_processed['Driver'] = df_processed['Driver'].apply(lambda x: replace_and_get_max_rating(x, driver_ratings))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 77,
+   "id": "4f88b6bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_practice_only_drivers(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Remove rows of drivers who only participated in practice sessions without racing.\n",
+    "    \n",
+    "    Args:\n",
+    "    df (pd.DataFrame): DataFrame containing F1 data with at least 'Pos (race)' column.\n",
+    "    \n",
+    "    Returns:\n",
+    "    pd.DataFrame: Cleaned DataFrame with only rows of drivers who participated in races.\n",
+    "    \"\"\"\n",
+    "    # Check if 'Pos (race)' column exists\n",
+    "    if 'Pos (race)' not in df.columns:\n",
+    "        raise ValueError(\"DataFrame must contain 'Pos (race)' column.\")\n",
+    "    \n",
+    "    # Iterate over DataFrame rows\n",
+    "    for index, row in df.iterrows():\n",
+    "        # Check if 'Pos (race)' value is missing or not a number\n",
+    "        if pd.isna(row['Driver']):\n",
+    "            # If missing or 'NC', drop the row\n",
+    "            df.drop(index, inplace=True)\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "df_processed = remove_practice_only_drivers(df_processed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "id": "599ab789",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change NaNs in 'Points' column to 0 and cast to int\n",
+    "df_processed['Points'].fillna(0, inplace=True)\n",
+    "df_processed['Points'] = df_processed['Points'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b201133e",
    "metadata": {},
    "outputs": [
     {
@@ -231,6 +303,7 @@
        "      <th>Car</th>\n",
        "      <th>Pos (race)</th>\n",
        "      <th>Points</th>\n",
+       "      <th>Pos (qualifying)</th>\n",
        "      <th>AvgAirTemp</th>\n",
        "      <th>AvgHumidity</th>\n",
        "      <th>AvgPressure</th>\n",
@@ -238,6 +311,7 @@
        "      <th>AvgTrackTemp</th>\n",
        "      <th>AvgWindDirection</th>\n",
        "      <th>AvgWindSpeed</th>\n",
+       "      <th>Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -249,7 +323,8 @@
        "      <td>1.7</td>\n",
        "      <td>1.6</td>\n",
        "      <td>1</td>\n",
-       "      <td>26.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
        "      <td>23.62</td>\n",
        "      <td>29.49</td>\n",
        "      <td>1010.39</td>\n",
@@ -257,6 +332,7 @@
        "      <td>28.61</td>\n",
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
+       "      <td>Charles Leclerc LEC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -266,7 +342,8 @@
        "      <td>1.4</td>\n",
        "      <td>1.0</td>\n",
        "      <td>20</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
        "      <td>23.62</td>\n",
        "      <td>29.49</td>\n",
        "      <td>1010.39</td>\n",
@@ -274,6 +351,7 @@
        "      <td>28.61</td>\n",
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
+       "      <td>Pierre Gasly GAS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -283,7 +361,8 @@
        "      <td>2.1</td>\n",
        "      <td>1.8</td>\n",
        "      <td>19</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>23.62</td>\n",
        "      <td>29.49</td>\n",
        "      <td>1010.39</td>\n",
@@ -291,6 +370,7 @@
        "      <td>28.61</td>\n",
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
+       "      <td>Max Verstappen VER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -300,7 +380,8 @@
        "      <td>1.3</td>\n",
        "      <td>1.8</td>\n",
        "      <td>18</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "      <td>23.62</td>\n",
        "      <td>29.49</td>\n",
        "      <td>1010.39</td>\n",
@@ -308,6 +389,7 @@
        "      <td>28.61</td>\n",
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
+       "      <td>Sergio Perez PER</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -317,7 +399,8 @@
        "      <td>1.1</td>\n",
        "      <td>1.9</td>\n",
        "      <td>17</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
        "      <td>23.62</td>\n",
        "      <td>29.49</td>\n",
        "      <td>1010.39</td>\n",
@@ -325,9 +408,12 @@
        "      <td>28.61</td>\n",
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
+       "      <td>Nico Hulkenberg HUL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -351,7 +437,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.9</td>\n",
        "      <td>17</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
        "      <td>28.52</td>\n",
        "      <td>59.01</td>\n",
        "      <td>1016.46</td>\n",
@@ -359,6 +446,7 @@
        "      <td>44.66</td>\n",
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
+       "      <td>Lance Stroll STR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1044</th>\n",
@@ -368,7 +456,8 @@
        "      <td>1.2</td>\n",
        "      <td>1.9</td>\n",
        "      <td>18</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
        "      <td>28.52</td>\n",
        "      <td>59.01</td>\n",
        "      <td>1016.46</td>\n",
@@ -376,6 +465,7 @@
        "      <td>44.66</td>\n",
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
+       "      <td>Alexander Albon ALB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1045</th>\n",
@@ -385,7 +475,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.6</td>\n",
        "      <td>19</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
        "      <td>28.52</td>\n",
        "      <td>59.01</td>\n",
        "      <td>1016.46</td>\n",
@@ -393,6 +484,7 @@
        "      <td>44.66</td>\n",
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
+       "      <td>Kevin Magnussen MAG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1046</th>\n",
@@ -402,7 +494,8 @@
        "      <td>1.4</td>\n",
        "      <td>1.2</td>\n",
        "      <td>12</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
        "      <td>28.52</td>\n",
        "      <td>59.01</td>\n",
        "      <td>1016.46</td>\n",
@@ -410,6 +503,7 @@
        "      <td>44.66</td>\n",
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
+       "      <td>Pierre Gasly GAS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1047</th>\n",
@@ -419,7 +513,8 @@
        "      <td>1.6</td>\n",
        "      <td>1.9</td>\n",
        "      <td>1</td>\n",
-       "      <td>25.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>9</td>\n",
        "      <td>28.52</td>\n",
        "      <td>59.01</td>\n",
        "      <td>1016.46</td>\n",
@@ -427,56 +522,57 @@
        "      <td>44.66</td>\n",
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
+       "      <td>Lando Norris NOR</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>897 rows × 14 columns</p>\n",
+       "<p>866 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Year     Race  No  Driver  Car  Pos (race)  Points  AvgAirTemp  \\\n",
-       "0     2022  Bahrain  16     1.7  1.6           1    26.0       23.62   \n",
-       "1     2022  Bahrain  10     1.4  1.0          20     0.0       23.62   \n",
-       "2     2022  Bahrain   1     2.1  1.8          19     0.0       23.62   \n",
-       "3     2022  Bahrain  11     1.3  1.8          18     0.0       23.62   \n",
-       "4     2022  Bahrain  27     1.1  1.9          17     0.0       23.62   \n",
-       "...    ...      ...  ..     ...  ...         ...     ...         ...   \n",
-       "1043  2024    Miami  18     1.0  1.9          17     0.0       28.52   \n",
-       "1044  2024    Miami  23     1.2  1.9          18     0.0       28.52   \n",
-       "1045  2024    Miami  20     1.0  1.6          19     0.0       28.52   \n",
-       "1046  2024    Miami  10     1.4  1.2          12     0.0       28.52   \n",
-       "1047  2024    Miami   4     1.6  1.9           1    25.0       28.52   \n",
+       "      Year     Race  No  Driver  Car  Pos (race)  Points  Pos (qualifying)  \\\n",
+       "0     2022  Bahrain  16     1.7  1.6           1      26                 1   \n",
+       "1     2022  Bahrain  10     1.4  1.0          20       0                10   \n",
+       "2     2022  Bahrain   1     2.1  1.8          19       0                 2   \n",
+       "3     2022  Bahrain  11     1.3  1.8          18       0                 4   \n",
+       "4     2022  Bahrain  27     1.1  1.9          17       0                17   \n",
+       "...    ...      ...  ..     ...  ...         ...     ...               ...   \n",
+       "1043  2024    Miami  18     1.0  1.9          17       0                 7   \n",
+       "1044  2024    Miami  23     1.2  1.9          18       0                20   \n",
+       "1045  2024    Miami  20     1.0  1.6          19       0                14   \n",
+       "1046  2024    Miami  10     1.4  1.2          12       0                16   \n",
+       "1047  2024    Miami   4     1.6  1.9           1      25                 9   \n",
        "\n",
-       "      AvgHumidity  AvgPressure  TotalRainfall  AvgTrackTemp  AvgWindDirection  \\\n",
-       "0           29.49      1010.39              0         28.61            124.43   \n",
-       "1           29.49      1010.39              0         28.61            124.43   \n",
-       "2           29.49      1010.39              0         28.61            124.43   \n",
-       "3           29.49      1010.39              0         28.61            124.43   \n",
-       "4           29.49      1010.39              0         28.61            124.43   \n",
-       "...           ...          ...            ...           ...               ...   \n",
-       "1043        59.01      1016.46              0         44.66            152.64   \n",
-       "1044        59.01      1016.46              0         44.66            152.64   \n",
-       "1045        59.01      1016.46              0         44.66            152.64   \n",
-       "1046        59.01      1016.46              0         44.66            152.64   \n",
-       "1047        59.01      1016.46              0         44.66            152.64   \n",
+       "      AvgAirTemp  AvgHumidity  AvgPressure  TotalRainfall  AvgTrackTemp  \\\n",
+       "0          23.62        29.49      1010.39              0         28.61   \n",
+       "1          23.62        29.49      1010.39              0         28.61   \n",
+       "2          23.62        29.49      1010.39              0         28.61   \n",
+       "3          23.62        29.49      1010.39              0         28.61   \n",
+       "4          23.62        29.49      1010.39              0         28.61   \n",
+       "...          ...          ...          ...            ...           ...   \n",
+       "1043       28.52        59.01      1016.46              0         44.66   \n",
+       "1044       28.52        59.01      1016.46              0         44.66   \n",
+       "1045       28.52        59.01      1016.46              0         44.66   \n",
+       "1046       28.52        59.01      1016.46              0         44.66   \n",
+       "1047       28.52        59.01      1016.46              0         44.66   \n",
        "\n",
-       "      AvgWindSpeed  \n",
-       "0             0.30  \n",
-       "1             0.30  \n",
-       "2             0.30  \n",
-       "3             0.30  \n",
-       "4             0.30  \n",
-       "...            ...  \n",
-       "1043          3.08  \n",
-       "1044          3.08  \n",
-       "1045          3.08  \n",
-       "1046          3.08  \n",
-       "1047          3.08  \n",
+       "      AvgWindDirection  AvgWindSpeed                 Name  \n",
+       "0               124.43          0.30  Charles Leclerc LEC  \n",
+       "1               124.43          0.30     Pierre Gasly GAS  \n",
+       "2               124.43          0.30   Max Verstappen VER  \n",
+       "3               124.43          0.30     Sergio Perez PER  \n",
+       "4               124.43          0.30  Nico Hulkenberg HUL  \n",
+       "...                ...           ...                  ...  \n",
+       "1043            152.64          3.08     Lance Stroll STR  \n",
+       "1044            152.64          3.08  Alexander Albon ALB  \n",
+       "1045            152.64          3.08  Kevin Magnussen MAG  \n",
+       "1046            152.64          3.08     Pierre Gasly GAS  \n",
+       "1047            152.64          3.08     Lando Norris NOR  \n",
        "\n",
-       "[897 rows x 14 columns]"
+       "[866 rows x 16 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "id": "4db84d1f",
    "metadata": {},
    "outputs": [],
@@ -512,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
