--- a/f1_project.ipynb
+++ b/f1_project.ipynb
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1517,44 +1517,51 @@
     "    real<lower=0, upper=1> theta = normal_rng(0.5, 0.5);\n",
     "\n",
     "    for (n in 1:N) {\n",
-    "        lambda[n] = qualifying_positions[n] + alpha * driver_skills[n] + beta * car_skills[n];\n",
-    "        // lambda[n] = qualifying_positions[n];\n",
-    "        lambda[n] = quali + alpha * driver_skills[n] + beta * car_skills[n];\n",
+    "        // lambda[n] = qualifying_positions[n] + alpha * driver_skills[n] + beta * car_skills[n];\n",
+    "        // lambda[n] = quali + alpha * driver_skills[n] + beta * car_skills[n];\n",
     "        // race_position[n] = poisson_rng(lambda[n]);\n",
-    "        // race_position[n] = binomial_rng(N, theta);\n",
+    "        race_position[n] = binomial_rng(N, theta);\n",
     "    }\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting stan/model1.stan\n"
+     ]
+    }
+   ],
    "source": [
-    "# %%writefile stan/model1.stan\n",
-    "# data {\n",
-    "#     int N;\n",
-    "#     array[N] int<lower=1> qualifying_positions;\n",
-    "#     array[N] real driver_skills;\n",
-    "#     array[N] real car_skills;\n",
-    "# }\n",
+    "%%writefile stan/model1.stan\n",
+    "data {\n",
+    "    int N;\n",
+    "    array[N] int<lower=1> qualifying_positions;\n",
+    "    array[N] real driver_skills;\n",
+    "    array[N] real car_skills;\n",
+    "}\n",
     "\n",
-    "# generated quantities {\n",
-    "#     array[N] real lambda;\n",
-    "#     array[N] int race_position;\n",
-    "#     real alpha = normal_rng(0, 0.1);\n",
-    "#     real beta = normal_rng(0, 0.1);\n",
-    "#     for (n in 1:N) {\n",
-    "#         lambda[n] = qualifying_positions[n] + alpha * driver_skills[n] + beta * car_skills[n];\n",
-    "#         race_position[n] = binomial_rng(20, lambda[n] / 20); // 20 to górna granica\n",
-    "#     }\n",
-    "# }\n"
+    "generated quantities {\n",
+    "    array[N] real<upper=20> lambda;\n",
+    "    array[N] int race_position;\n",
+    "    real alpha = normal_rng(0, 0.1);\n",
+    "    real beta = normal_rng(0, 0.1);\n",
+    "    for (n in 1:N) {\n",
+    "        lambda[n] = qualifying_positions[n] + alpha * driver_skills[n] + beta * car_skills[n];\n",
+    "        race_position[n] = binomial_rng(20, lambda[n] / 20); // 20 to górna granica\n",
+    "    }\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1654,7 @@
        "       [nan, nan, nan, ..., nan, nan, nan]])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1695,6 +1702,8 @@
        "      <th>lambda[7]</th>\n",
        "      <th>lambda[8]</th>\n",
        "      <th>...</th>\n",
+       "      <th>race_position[859]</th>\n",
+       "      <th>race_position[860]</th>\n",
        "      <th>race_position[861]</th>\n",
        "      <th>race_position[862]</th>\n",
        "      <th>race_position[863]</th>\n",
@@ -1703,8 +1712,6 @@
        "      <th>race_position[866]</th>\n",
        "      <th>alpha</th>\n",
        "      <th>beta</th>\n",
-       "      <th>quali</th>\n",
-       "      <th>theta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2070,7 +2077,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15 rows × 1738 columns</p>\n",
+       "<p>15 rows × 1736 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2091,7 +2098,7 @@
        "13   0.0            0.0        NaN        NaN        NaN        NaN   \n",
        "14   0.0            0.0        NaN        NaN        NaN        NaN   \n",
        "\n",
-       "    lambda[5]  lambda[6]  lambda[7]  lambda[8]  ...  race_position[861]  \\\n",
+       "    lambda[5]  lambda[6]  lambda[7]  lambda[8]  ...  race_position[859]  \\\n",
        "0         NaN        NaN        NaN        NaN  ...                 NaN   \n",
        "1         NaN        NaN        NaN        NaN  ...                 NaN   \n",
        "2         NaN        NaN        NaN        NaN  ...                 NaN   \n",
@@ -2108,7 +2115,7 @@
        "13        NaN        NaN        NaN        NaN  ...                 NaN   \n",
        "14        NaN        NaN        NaN        NaN  ...                 NaN   \n",
        "\n",
-       "    race_position[862]  race_position[863]  race_position[864]  \\\n",
+       "    race_position[860]  race_position[861]  race_position[862]  \\\n",
        "0                  NaN                 NaN                 NaN   \n",
        "1                  NaN                 NaN                 NaN   \n",
        "2                  NaN                 NaN                 NaN   \n",
@@ -2125,27 +2132,44 @@
        "13                 NaN                 NaN                 NaN   \n",
        "14                 NaN                 NaN                 NaN   \n",
        "\n",
-       "    race_position[865]  race_position[866]  alpha  beta  quali  theta  \n",
-       "0                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "1                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "2                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "3                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "4                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "5                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "6                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "7                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "8                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "9                  NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "10                 NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "11                 NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "12                 NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "13                 NaN                 NaN    NaN   NaN    NaN    NaN  \n",
-       "14                 NaN                 NaN    NaN   NaN    NaN    NaN  \n",
+       "    race_position[863]  race_position[864]  race_position[865]  \\\n",
+       "0                  NaN                 NaN                 NaN   \n",
+       "1                  NaN                 NaN                 NaN   \n",
+       "2                  NaN                 NaN                 NaN   \n",
+       "3                  NaN                 NaN                 NaN   \n",
+       "4                  NaN                 NaN                 NaN   \n",
+       "5                  NaN                 NaN                 NaN   \n",
+       "6                  NaN                 NaN                 NaN   \n",
+       "7                  NaN                 NaN                 NaN   \n",
+       "8                  NaN                 NaN                 NaN   \n",
+       "9                  NaN                 NaN                 NaN   \n",
+       "10                 NaN                 NaN                 NaN   \n",
+       "11                 NaN                 NaN                 NaN   \n",
+       "12                 NaN                 NaN                 NaN   \n",
+       "13                 NaN                 NaN                 NaN   \n",
+       "14                 NaN                 NaN                 NaN   \n",
        "\n",
-       "[15 rows x 1738 columns]"
+       "    race_position[866]  alpha  beta  \n",
+       "0                  NaN    NaN   NaN  \n",
+       "1                  NaN    NaN   NaN  \n",
+       "2                  NaN    NaN   NaN  \n",
+       "3                  NaN    NaN   NaN  \n",
+       "4                  NaN    NaN   NaN  \n",
+       "5                  NaN    NaN   NaN  \n",
+       "6                  NaN    NaN   NaN  \n",
+       "7                  NaN    NaN   NaN  \n",
+       "8                  NaN    NaN   NaN  \n",
+       "9                  NaN    NaN   NaN  \n",
+       "10                 NaN    NaN   NaN  \n",
+       "11                 NaN    NaN   NaN  \n",
+       "12                 NaN    NaN   NaN  \n",
+       "13                 NaN    NaN   NaN  \n",
+       "14                 NaN    NaN   NaN  \n",
+       "\n",
+       "[15 rows x 1736 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2157,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
