Add constructor to data

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "813e5739",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "6a4f4fb9",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "df043bf6",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "ea6596c0",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "511f03f3",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "00e97417",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "032e690e",
    "metadata": {},
    "outputs": [],
@@ -220,13 +220,14 @@
     "    return max(ratings) if ratings else None\n",
     "\n",
     "df_processed['Name'] = df_processed['Driver']\n",
+    "df_processed['Constructor'] = df_processed['Car']\n",
     "df_processed['Car'] = df_processed['Car'].apply(lambda x: replace_and_get_max_rating(x, constructor_ratings))\n",
     "df_processed['Driver'] = df_processed['Driver'].apply(lambda x: replace_and_get_max_rating(x, driver_ratings))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "4f88b6bd",
    "metadata": {},
    "outputs": [],
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "599ab789",
    "metadata": {},
    "outputs": [],
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "b201133e",
    "metadata": {},
    "outputs": [
@@ -312,6 +313,7 @@
        "      <th>AvgWindDirection</th>\n",
        "      <th>AvgWindSpeed</th>\n",
        "      <th>Name</th>\n",
+       "      <th>Constructor</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -333,6 +335,7 @@
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
        "      <td>Charles Leclerc LEC</td>\n",
+       "      <td>Ferrari</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -352,6 +355,7 @@
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
        "      <td>Pierre Gasly GAS</td>\n",
+       "      <td>AlphaTauri RBPT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -371,6 +375,7 @@
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
        "      <td>Max Verstappen VER</td>\n",
+       "      <td>Red Bull Racing RBPT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -390,6 +395,7 @@
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
        "      <td>Sergio Perez PER</td>\n",
+       "      <td>Red Bull Racing RBPT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -409,9 +415,11 @@
        "      <td>124.43</td>\n",
        "      <td>0.30</td>\n",
        "      <td>Nico Hulkenberg HUL</td>\n",
+       "      <td>Aston Martin Aramco Mercedes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -447,6 +455,7 @@
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
        "      <td>Lance Stroll STR</td>\n",
+       "      <td>Aston Martin Aramco Mercedes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1044</th>\n",
@@ -466,6 +475,7 @@
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
        "      <td>Alexander Albon ALB</td>\n",
+       "      <td>Williams Mercedes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1045</th>\n",
@@ -485,6 +495,7 @@
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
        "      <td>Kevin Magnussen MAG</td>\n",
+       "      <td>Haas Ferrari</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1046</th>\n",
@@ -504,6 +515,7 @@
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
        "      <td>Pierre Gasly GAS</td>\n",
+       "      <td>Alpine Renault</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1047</th>\n",
@@ -523,10 +535,11 @@
        "      <td>152.64</td>\n",
        "      <td>3.08</td>\n",
        "      <td>Lando Norris NOR</td>\n",
+       "      <td>McLaren Mercedes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>866 rows × 16 columns</p>\n",
+       "<p>866 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -556,23 +569,36 @@
        "1046       28.52        59.01      1016.46              0         44.66   \n",
        "1047       28.52        59.01      1016.46              0         44.66   \n",
        "\n",
-       "      AvgWindDirection  AvgWindSpeed                 Name  \n",
-       "0               124.43          0.30  Charles Leclerc LEC  \n",
-       "1               124.43          0.30     Pierre Gasly GAS  \n",
-       "2               124.43          0.30   Max Verstappen VER  \n",
-       "3               124.43          0.30     Sergio Perez PER  \n",
-       "4               124.43          0.30  Nico Hulkenberg HUL  \n",
-       "...                ...           ...                  ...  \n",
-       "1043            152.64          3.08     Lance Stroll STR  \n",
-       "1044            152.64          3.08  Alexander Albon ALB  \n",
-       "1045            152.64          3.08  Kevin Magnussen MAG  \n",
-       "1046            152.64          3.08     Pierre Gasly GAS  \n",
-       "1047            152.64          3.08     Lando Norris NOR  \n",
+       "      AvgWindDirection  AvgWindSpeed                 Name  \\\n",
+       "0               124.43          0.30  Charles Leclerc LEC   \n",
+       "1               124.43          0.30     Pierre Gasly GAS   \n",
+       "2               124.43          0.30   Max Verstappen VER   \n",
+       "3               124.43          0.30     Sergio Perez PER   \n",
+       "4               124.43          0.30  Nico Hulkenberg HUL   \n",
+       "...                ...           ...                  ...   \n",
+       "1043            152.64          3.08     Lance Stroll STR   \n",
+       "1044            152.64          3.08  Alexander Albon ALB   \n",
+       "1045            152.64          3.08  Kevin Magnussen MAG   \n",
+       "1046            152.64          3.08     Pierre Gasly GAS   \n",
+       "1047            152.64          3.08     Lando Norris NOR   \n",
        "\n",
-       "[866 rows x 16 columns]"
+       "                       Constructor  \n",
+       "0                          Ferrari  \n",
+       "1                  AlphaTauri RBPT  \n",
+       "2             Red Bull Racing RBPT  \n",
+       "3             Red Bull Racing RBPT  \n",
+       "4     Aston Martin Aramco Mercedes  \n",
+       "...                            ...  \n",
+       "1043  Aston Martin Aramco Mercedes  \n",
+       "1044             Williams Mercedes  \n",
+       "1045                  Haas Ferrari  \n",
+       "1046                Alpine Renault  \n",
+       "1047              McLaren Mercedes  \n",
+       "\n",
+       "[866 rows x 17 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "4db84d1f",
    "metadata": {},
    "outputs": [],
